# HelloWorldCI

./: .travis.yml  CMakeLists.txt  CMakeLists.txt.in  README.md  helloworld.cpp  helloworld.h  main.cpp  test_helloworld.cpp  test_version.cpp  version.h
